--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@android:color/white">
-    <TextView
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ViewFlipper
+            android:id="@+id/view_flipper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hello World, MainActivity"  />
-</LinearLayout>
+            android:layout_height="match_parent">
+
+        <FrameLayout
+                android:id="@+id/list_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        <FrameLayout
+                android:id="@+id/details_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+    </ViewFlipper>
+</merge>
 
