--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,4 +3,119 @@
     <style name="ChatTheme" parent="android:Theme.Holo.Light">
         <item name="android:windowBackground">@null</item>
     </style>
+
+    <style name="ChatTheme.Text" parent="android:Widget.TextView">
+        <!--<item name="android:background">@color/background_box</item>-->
+        <item name="android:textColor">@color/font_main</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="ChatTheme.TextLight" parent="android:Widget.TextView">
+        <!--<item name="android:background">@color/background_box</item>-->
+        <item name="android:textColor">@color/font_main_light</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.Medium">
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="ChatTheme.TextLight.Medium">
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="ChatTheme.TextLight.LargeMedium">
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="ChatTheme.TextLight.LargeMedium.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ChatTheme.TextLight.Medium.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ChatTheme.Text.Bigger">
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.Bigger.OrangeLight">
+        <item name="android:textColor">@color/chart_orange_light</item>
+    </style>
+
+    <style name="ChatTheme.Text.Bigger.OrangeMedium">
+        <item name="android:textColor">@color/chart_orange_medium</item>
+    </style>
+
+    <style name="ChatTheme.Text.Bigger.OrangeStrong">
+        <item name="android:textColor">@color/chart_orange_strong</item>
+    </style>
+
+    <style name="ChatTheme.Text.Bigger.Bold">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ChatTheme.Text.Big">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.Big.Bold">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ChatTheme.Text.Giant">
+        <item name="android:textSize">26sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.Giant.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ChatTheme.TextLight.Big">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="ChatTheme.TextLight.Big.Bold">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ChatTheme.Text.White">
+        <!--<item name="android:background">@color/main_green</item>-->
+        <item name="android:textColor">@color/font_white</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.White.Big">
+        <!--<item name="android:background">@color/main_green</item>-->
+        <item name="android:textColor">@color/font_white</item>
+        <item name="android:textSize">26sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.Green">
+        <!--<item name="android:background">@color/background_box</item>-->
+        <item name="android:textColor">@color/main_green</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.Green.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ChatTheme.Text.Green.Big">
+        <item name="android:textSize">48sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.Purple">
+        <!--<item name="android:background">@color/background_box</item>-->
+        <item name="android:textColor">@color/additional_purple</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="ChatTheme.Text.Purple.Bigger">
+        <item name="android:textSize">17sp</item>
+    </style>
 </resources>
