--- a/res/layout/activity_article_chat.xml
+++ b/res/layout/activity_article_chat.xml
@@ -3,10 +3,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+                android:background="@color/background_gray_light"
+             >
 
     <view android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           class="pl.schibsted.chat.activities.ChatView"
-          android:id="@+id/view"/>
+          android:id="@+id/chatView"/>
 </LinearLayout>
