--- a/res/layout/view_chat.xml
+++ b/res/layout/view_chat.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text=" "
-            android:id="@+id/chatOutput"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="What you say?" />
     <EditText
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:id="@+id/chatInput"
-            android:imeOptions="actionSend"/>
-</LinearLayout>
+            android:imeOptions="actionSend" android:layout_alignParentBottom="true" android:inputType="textShortMessage"/>
+        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:id="@+id/chatview_messagelist"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
+                  android:background="@color/background_gray_light"
+
+                  android:layout_above="@+id/chatInput"/>
+</RelativeLayout>
