--- a/res/layout/view_chatmessage.xml
+++ b/res/layout/view_chatmessage.xml
@@ -5,4 +5,10 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <view android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          class="pl.schibsted.chat.components.LatoTextView" android:id="@+id/chat_name"/>
+    <view android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          class="pl.schibsted.chat.components.LatoTextView" android:id="@+id/chat_text"/>
 </LinearLayout>
