--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <ViewFlipper
-            android:id="@+id/view_flipper"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
         <FrameLayout
-                android:id="@+id/list_container"
+                android:id="@+id/content_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        <FrameLayout
-                android:id="@+id/details_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-    </ViewFlipper>
+                android:layout_height="match_parent"
+                android:background="@color/background_gray_light"/>
 </merge>
 
