--- a/res/layout/fragment_single_article.xml
+++ b/res/layout/fragment_single_article.xml
@@ -4,6 +4,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -13,10 +14,12 @@
                 android:id="@+id/single_article_title_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:padding="10dp"
                 android:text="@string/todo"
                 style="@style/ChatTheme.Text.Big"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:background="@color/background_box"
+                android:drawableRight="@drawable/comment"/>
 
         <ImageView
                 android:id="@+id/single_article_image_view"
