--- a/res/layout/card_item.xml
+++ b/res/layout/card_item.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/no_avatar_M"
+            android:src="@drawable/no_avatar_m"
             android:layout_below="@id/article_title_text_view"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"/>
